Fix: Add app.py entry point and update render.yaml start command

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: lets-play-app
+    name: meu-projeto
     runtime: python
     buildCommand: ./build.sh
-    startCommand: gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT backend.main:app
+    startCommand: gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
